Make apply meal plan button work in diary
